[gd_scene load_steps=15 format=2]

[ext_resource path="res://singletone/system_data_manager_dependency/pin_system/pin_manger.gd" type="Script" id=1]
[ext_resource path="res://singletone/system_data_manager_dependency/pin_system/pin_save_system.gd" type="Script" id=4]
[ext_resource path="res://singletone/system_data_manager_dependency/symbol_template_system/symbol_template_save_system.gd" type="Script" id=5]
[ext_resource path="res://singletone/system_data_manager_dependency/map_system/map_save_system.gd" type="Script" id=6]
[ext_resource path="res://singletone/system_data_manager_dependency/article_system/article_save_system.gd" type="Script" id=7]
[ext_resource path="res://singletone/system_data_manager.gd" type="Script" id=8]
[ext_resource path="res://singletone/system_data_manager_dependency/map_system/map_manager.gd" type="Script" id=9]
[ext_resource path="res://singletone/system_data_manager_dependency/article_system/article_manager.gd" type="Script" id=10]
[ext_resource path="res://singletone/system_data_manager_dependency/pin_system/pin_system.gd" type="Script" id=11]
[ext_resource path="res://singletone/system_data_manager_dependency/article_system/article_system.gd" type="Script" id=12]
[ext_resource path="res://singletone/system_data_manager_dependency/symbol_template_system/symbol_template_system.gd" type="Script" id=13]
[ext_resource path="res://singletone/system_data_manager_dependency/map_system/map_system.gd" type="Script" id=15]
[ext_resource path="res://singletone/system_data_manager_dependency/system_inventory.gd" type="Script" id=16]
[ext_resource path="res://singletone/system_data_manager_dependency/map_system/map_chunk_system.gd" type="Script" id=17]

[node name="SystemDataManager" type="Node"]
script = ExtResource( 8 )

[node name="SystemInventory" type="Node" parent="."]
script = ExtResource( 16 )

[node name="PinSystem" type="Node" parent="."]
script = ExtResource( 11 )

[node name="SaveSystem" type="Node" parent="PinSystem"]
script = ExtResource( 4 )

[node name="PinManager" type="Node" parent="PinSystem"]
script = ExtResource( 1 )

[node name="SymbolTemplateSystem" type="Node" parent="."]
script = ExtResource( 13 )

[node name="SaveSystem" type="Node" parent="SymbolTemplateSystem"]
script = ExtResource( 5 )

[node name="MapSystem" type="Node" parent="."]
script = ExtResource( 15 )

[node name="SaveSystem" type="Node" parent="MapSystem"]
script = ExtResource( 6 )

[node name="MapManager" type="Node" parent="MapSystem"]
script = ExtResource( 9 )

[node name="MapchunkGenerator" type="Node" parent="MapSystem"]
script = ExtResource( 17 )

[node name="ArticleSystem" type="Node" parent="."]
script = ExtResource( 12 )

[node name="SaveSystem" type="Node" parent="ArticleSystem"]
script = ExtResource( 7 )

[node name="ArticleManager" type="Node" parent="ArticleSystem"]
script = ExtResource( 10 )

[connection signal="data_saved" from="MapSystem/SaveSystem" to="MapSystem" method="_on_SaveSystem_data_saved"]
